deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: httpd-frontend
  name: httpd-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: httpd-frontend
  template:
    metadata:
      labels:
        name: httpd-frontend
    spec:
      containers:
      - name: httpd
        image: httpd:2.4-alpine
