deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      name: front-end
  template:
    metadata:
      labels:
        name: front-end
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
      # - name: httpd
      #   image: httpd:2.4-alpine
