pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: db
spec:
  containers:
  - image: redis:alpine
    name: redis
