netowrk.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-port-from-namespace
   namespace: internal
spec:
   podSelector: {}
   policyTypes:
   - Ingress
   ingress:
   - from:
     - podSelector: {}
     ports:
     - port: 8080
